# continuous-section-field

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  __init__.py  csf_new.tar  geometry.tcl  pyproject.toml  setup_git.sh  simplebox.yaml
CSFStacked/: README.md  stacked_0.yaml  stacked_1.yaml  stacked_csf_example.py  uniform.yaml
CSFStacked/.ipynb_checkpoints/: csf_pycba_demo_ready-checkpoint.ipynb
actions-examples/: README.md  run_degraded_pole_analysis.md  tutorial-actions.md
actions-examples/Museum-Mercedes-Benz/: geometry.yaml  pillartwist.sh  pillartwist.yaml  pillartwist_actions.yaml  star_param.py
actions-examples/UrbanViaduct/: README.md  geometry_pier_seg1.ps1
actions-examples/blade/: Cylinder1_coords.txt  NACA64_A17_coords.txt  README.md  action.yaml  blade.sh  geometry.yaml  geometry.yaml-safe  make_csf_blade.sh  make_csf_blade_yaml.py  make_geometry-twist.sh  make_geometry.sh
csf/: CSFActions.py  CSFStacked.py  __init__.py  section_field.py
csf/actions/: volume.py  (+7 more)
docs/: CSFDesign–Analysis-Workflow.md  CSFLongitudinally-varying-homogenization-user-guide.md  CSF_Fundamentals.md  CSF_Polygon_Geometry_Guide.md  GeneratingSectionGeometryWithAnLLM.md  OpenSeesIntegrationNumericalStrategy.md  QuickStartGuide.md  README.md  actions_template.yaml  api.md  assumptions_limitations.md  core_assumption.md  cross_section_homogenization.md  csf-actions-guide.md  csf-opensees-int-ug.md  csf_2dxf_instrucions.md  csf_actions.md  csf_openseespy_builder.md  csf_sp_stepbystep_guide.md  csf_sp_user_guide.md  csftutorial.md  csftutorial_corrected.md  ec2_csf_degradation_weight_laws.md  geometric_containment_effective_weight.md  menifesto.md  openseesIntegration.md  opensees_win11_setup.md  readme2.md  references.md  report.md  scs-contimouis-v-piecewise.md  user_guide.md  weight_law_example.md  when_to_choose_what.md  write_opensees_builder_tcl.md  write_sap2000_template_pack.md  writegeometry_rio_v2_guide.md
example/: README.md  TowerAccionaAW3000.md  cilinder_withcheck.py  csf_composite_material_lab.py  csf_opensees_check.py  csf_opensees_lab.py  csf_opensees_verifier.py  csf_rotated_validation_benchmark.py  csf_weights_lab.py  cylinder_withcheck.py  experimental_data.txt  nrel_5mw_tower.py  tsection_lab.py  tsection_opensees.py  wtemp.txt
images/: image.txt
technical-white-paper/: 00_overview.md  01_concepts_and_scope.md  02_geometry_model.md  03_weight_laws.md  04_section_properties.md  05_numerical_engine.md  06_validation_cylinder.md  07_validation_nrel_5mw.md  08_opensees_integration.md  09_yaml_workflow.md  10_actions_reference.md  11_common_pitfalls.md  12_faq_methodology.md  README.md  summary.md
tests/: README.md  test_verification.py
tools/: generate_api_doc.py
utilities/: create_pole_cone.sh  create_single_polygon_hole_builder.sh
(+305 files in other folders)
